--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,49 +1,50 @@
-footer{
-  background-color: #191F22;
+footer {
+  background-color: #191f22;
   padding-bottom: 1.5rem;
   color: #fff;
-  @include respond('desktop'){
-    padding-bottom: .5rem;
+  @include respond("desktop") {
+    padding-bottom: 0.5rem;
   }
-  img{
+  img {
     height: 122px;
     width: auto;
   }
-  p{
-    font-size: .7rem;
-    margin-top: 2rem;
-    @include respond('desktop'){
-      margin-top: auto;
+  p {
+    @include respond("phone") {
+      font-size: 0.7rem;
+    }
+    @include respond("tab-ñand") {
+      font-size: 1rem;
     }
   }
-  a{
+  a {
     color: #fff;
-    &:hover{
+    font-size: 0.9rem;
+    &:hover {
       text-decoration: none;
       color: #fff;
     }
   }
-  ul{    
+  ul {
     text-transform: uppercase;
     font-family: $main-font;
     font-weight: bold;
     letter-spacing: 2px;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 0;
-    @include respond('desktop'){
+    @include respond("desktop") {
       padding-inline-start: 40px;
     }
-    li{
+    li {
       font-family: $secondary-font;
       text-transform: capitalize;
       list-style: none;
-      font-size: .8rem;
+      font-size: 0.8rem;
       margin-top: 1rem;
-      a{
+      a {
         font-family: $secondary-font;
         color: #fff;
         text-decoration: none;
-       
       }
     }
   }
