--- a/scss/components/_top-header.scss
+++ b/scss/components/_top-header.scss
@@ -1,48 +1,57 @@
-.header-top{
+.header-top {
   background-color: $light-gray;
   width: 100%;
-  &__container{   
-    padding: .5rem 1rem; 
+  &__container {
+    padding: 0.5rem 1rem;
     display: flex;
     flex-direction: column;
-    @include respond('desktop'){
+    @include respond("desktop") {
       flex-direction: row;
-      padding: .5rem 2rem;
+      padding: 0.5rem 2rem;
     }
-    @include respond('big-desktop'){
-      padding: .5rem 15rem;
+    @include respond("big-desktop") {
+      padding: 0.5rem 15rem;
     }
   }
-  &__item{
+  &__item {
     display: flex;
     align-content: center;
-    &:last-child{
-      padding-top: .5rem;
+    &:last-child {
+      padding-top: 0.5rem;
     }
-    @include respond('desktop'){
-      
-      padding-left: 2rem;
-      justify-content: center;  
-      &:last-child{
+    @include respond("tab-port") {
+      margin-top: 0.5rem;
+      img {
+        height: 18px;
+      }
+      &:last-child {
         padding-top: 0;
-      }    
+      }
     }
-    p, a{
-      font-size: .8rem;
+    @include respond("desktop") {
+      padding-left: 2rem;
+      justify-content: center;
+      margin-top: 0;
+      // &:last-child{
+      //   padding-top: 0;
+      // }
+    }
+    p,
+    a {
+      font-size: 0.8rem;
       margin: 0;
       align-self: center;
       font-family: $main-font;
       color: $dark-gray;
     }
-    p{
-      padding-left: .5rem;
-      span{
+    p {
+      padding-left: 0.5rem;
+      span {
         color: #000;
         font-weight: bold;
       }
-      a{
-        
-        &:hover{
+      a {
+        &:hover {
           text-decoration: none;
         }
       }
