--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,8 +1,13 @@
 section.services {
   position: relative;
-  
+
   background: $light-gray;
-  @include respond('desktop'){
+
+  @include respond("desktop") {
+    background: none;
+    height: 63vh;
+  }
+  @include respond("big-desktop") {
     background: none;
     height: 100vh;
   }
@@ -15,44 +20,60 @@ section.services {
     width: 100%;
     height: 63%;
     z-index: -1;
+
+    @media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+      height: 50vh;
+    }
+    @include respond("desktop") {
+      height: 60vh;
+    }
     @include respond("big-desktop") {
-      height: 70%;
+      height: 55vh;
     }
   }
   .services__container {
-    @include respond('desktop'){
+    @include respond("desktop") {
       position: absolute;
       top: 5rem;
       left: 2rem;
-
     }
     @include respond("big-desktop") {
-      top: 10rem;
+      top: 6rem;
     }
   }
   .services__img-container {
-    @include respond("desktop") {
+    @include respond("tab-port") {
       img {
         position: absolute;
         &:nth-of-type(1) {
           width: 400px;
-          left: 7rem;
+          left: -1rem;
           top: 7%;
+          @include respond("desktop") {
+            width: 400px;
+            left: -2rem;
+            top: 7%;
+          }
           @include respond("big-desktop") {
             width: 500px;
-            left: 10rem;
+            left: -7rem;
             top: 7%;
           }
         }
         &:nth-of-type(2) {
           width: 400px;
-          left: 10rem;
-          top: -2rem;
-          margin-top: 15%;
+          left: 1rem;
+          top: 10rem;
+          // margin-top: 15%;
+          @include respond("desktop") {
+            width: 400px;
+            left: 0;
+            top: 7rem;
+          }
           @include respond("big-desktop") {
             width: 500px;
-            left: 15rem;
-            top: -2rem;
+            left: -3rem;
+            top: 7rem;
           }
         }
       }
@@ -78,12 +99,11 @@ section.services {
     }
   }
 }
-#blog{
+#blog {
   margin: 2rem 0;
-  a{
-    @include respond('desktop'){
+  a {
+    @include respond("desktop") {
       margin-left: 2rem;
-      
     }
   }
 }
@@ -92,20 +112,20 @@ section.services {
   background-size: cover;
   background-position: center;
   height: 100%;
-  @include respond('big-desktop'){
+  @include respond("big-desktop") {
     height: 700px;
   }
-  p{
+  p {
     padding: 3rem 0;
     margin: 0;
-    @include respond('desktop'){
+    @include respond("desktop") {
       padding: 4rem 0;
     }
   }
   h2 {
     font-size: 2rem;
     font-family: $main-font;
-    @include respond('big-desktop'){
+    @include respond("big-desktop") {
       font-size: 3.5rem;
     }
   }
@@ -114,9 +134,8 @@ section.services {
     height: 7px;
     background-color: #d5001c;
     width: 200px;
-    @include respond('big-desktop'){
+    @include respond("big-desktop") {
       width: 340px;
-
     }
   }
 
@@ -137,36 +156,36 @@ section.services {
 .book {
   background-color: #f8f8f9;
   padding: 2rem 0;
-  .col-md-4{
-    &:first-child{
+  .col-md-4 {
+    &:first-child {
       margin-top: 0;
     }
     margin-top: 2rem;
-    @include respond('desktop'){
+    @include respond("tab-port") {
       margin-top: 0;
     }
   }
-  @include respond('big-desktop'){
+  @include respond("big-desktop") {
     padding: 3rem 0;
     height: 120px;
-
   }
-  h3, h5{
+  h3,
+  h5 {
     font-family: $main-font;
     margin-bottom: 0;
   }
-  h3{ 
+  h3 {
     font-style: normal;
     font-weight: bold;
-    font-size: 1.6rem;  
+    font-size: 1.6rem;
   }
-  .italic{
+  .italic {
     font-style: italic;
-  }  
-  h5 {
-    font-size: 17px;    
   }
-  p{
+  h5 {
+    font-size: 17px;
+  }
+  p {
     font-size: 1.2rem;
     margin-bottom: 0;
     font-family: $main-font;
@@ -182,13 +201,15 @@ section.services {
   }
   p {
     color: #747f8d;
-    font-size: .9rem;
+    font-size: 0.9rem;
     margin: 1.5rem 0;
   }
 }
 .services--quote {
-  margin-top: -20rem;
   margin-bottom: 2rem;
+  @include respond("big-desktop") {
+    margin-top: -30rem;
+  }
   .card {
     background: #ffffff;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.09);
@@ -213,9 +234,9 @@ section.services {
 }
 .offers {
   margin: 3rem 0;
-  img{
+  img {
     margin-top: 1rem;
-    @include respond('desktop'){
+    @include respond("desktop") {
       margin-top: 0;
     }
   }
